108-kube/manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-demo
  labels:
    app: hello-demo
spec:
  containers:
  - name: hello-demo
    image: omsa_kub_app:v2
    ports:
      - containerPort: 80
