108-kube/manifests/stateful-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: pg-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: pg-app
    template:
       metadata:
          labels:
             app: pg-app
       spec:
          containers:
          - name: pg-app
            image: omsa_kub_app_state:v1
            ports:
              - name: web
                containerPort: 80
