108-kube/manifests/stateful.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: pg-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: pg-app
    template:
       metadata:
          labels:
             app: pg-app
       spec:
          containers:
          - name: pg-app
            image: omsa_kub_app_state:v1
            ports:
              - name: web
                containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: pg-service
spec:
  selector:
    app: pg-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /myapp($|/)(.*)
          pathType: Prefix  
          backend:
            service:
                name: hello-service
                port: 
                    number: 9000
        - path: /pg($|/)(.*)
          pathType: Prefix  
          backend:
            service:
                name: pg-service
                port: 
                    number: 9000
